--- a/landingweb_root/templates/index.html
+++ b/landingweb_root/templates/index.html
@@ -1,54 +1,38 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
+
+{% extends 'base.html' %}
+{% load static %}
+{% block index %}
+
+	<!-- карусель -->
+  	{% include 'carusel.html' %}
+  	<!-- Карточки -->
+  	{% include 'price.html' %}
+  	<!-- форма -->
+  	<section>
+  		<div class="container class_form">
+  			<h1 class="text-3">Оставь заявку и получи услугу</h1>
+  			<div class="row justify-content-center">
+  			<form action="" method="" style="width: 50%;">
+			  <div class="form-group row">
+			    <label for="inputEmail3" class="col-sm-2 col-form-label">Имя</label><br>
+			      <input type="text" class="form-control" name="name">
+			    <div class="">
+			    </div>
+			  </div>
+			  <div class="form-group row">
+			    <label for="inputEmail3" class="col-sm-2 col-form-label">Телефон</label><br>
+			      <input type="text" class="form-control" name="phone">
+			    <div class="">
+			    </div>
+			  </div>
+			  <div style="float: right;" class="form-group row">
+			      <button type="submit" class="btn btn-success">ОСТАВИТЬ ЗАЯВКУ</button>
+			  </div>
+			</form>
+			</div>
+  		</div>
+  	</section>
+
+{% endblock %}
 
 
-
-
-
-<form action="{% url 'thanks_page' %}" method="POST">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">ОТПРАВИТЬ</button>
-</form>
-
-<br>
-<br>
-<br>
-<br>
-<br>
-<br>
-
-{% if object_list %}
-<table border="1">
-    <tr>
-        <th>id</th>
-        <th>Дата</th>
-        <th>Имя</th>
-        <th>Телефон</th>
-    </tr>
-{% for obj in object_list %}
-    <tr>
-        <th>{{ obj.id }}</th>
-        <th>{{ obj.order_dt }}</th>
-        <th>{{ obj.order_name }}</th>
-        <th>{{ obj.order_phone }}</th>
-    </tr>
-{% endfor %}
-</table>
-{% else %}
-Нет данных
-{% endif %}
-
-</body>
-</html>
